--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
     <button class="button-play" id="playBtn">PLAY</button>
     <div class="result-container" id="result">
     </div>
-    <script src="game.js"></script>
+    <script src="./js/game.js"></script>
 </body>
 </html>
